--- a/bars.html
+++ b/bars.html
@@ -160,6 +160,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/chocolatepecanpiebars" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/cpb2.jpg" class="w-100" alt="Chocolate Pecan Pie Bars">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/chocolatepecanpiebars" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Pecan Pie Bars</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </section>
   </div>
