--- a/cookies.html
+++ b/cookies.html
@@ -237,6 +237,28 @@
           </figure>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/smorescookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/smorescookies3.jpg" class="w-100" alt="S'mores Cookies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/smorescookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">S'mores Cookies</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/triplechocolatecookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/triplechocolatecookies1.jpg" class="w-100" alt="Triple Chocolate Cookies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/triplechocolatecookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Triple Chocolate Cookies</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
     </section>
   </div>
 
