--- a/focaccia.html
+++ b/focaccia.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Recipes Curated by Emily</title>
-  <link rel="icon" href="assets/images/logos/el_logo.png" type="image/png" sizes="16x16"/>
+  <link rel="icon" href="assets/images/el_logo.png" type="image/png" sizes="16x16"/>
   <link href="assets/css/tastebite-styles.css" rel="stylesheet" type="text/css" media="all">
 <style>
     @font-face {
@@ -122,24 +122,23 @@
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
           <h5 class="py-3 mb-0 h2">Focaccia</h5>
-          <div style="font-family:MADEVoyagerThin; font-size:15px;"><img src="assets/images/icons/gf.png" style="width:35px; height:35px"><img src="assets/images/icons/df.png" style="width:35px; height:35px"><img src="assets/images/icons/v.png" style="width:35px; height:35px"></div>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Kristen Wood from Moon And Spoon And Yum</small>
+          <small class="ps-1">Author: Alexandra Stafford</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>November 7th, 2023</small>
+          <small>November 12th, 2024</small>
         </div>
       </div>
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/focaccia.jpg" class="w-100" >
+          <img src="assets/images/food/foccacia2.jpg" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -147,23 +146,19 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>15 minutes</span>
+                <span>16 hours and 30 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>17 minutes</span>
-              </li>
-              <li>
-                <small>Rising Time</small>
-                <span>1 hour 30 minutes</span>
+                <span>25 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>1 hour 57 minutes</span>
+                <span>16 hours and 55 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>10 pieces
+                <span>4
                 </span>
               </li>
             </ul>
@@ -174,39 +169,31 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="yeast">1 tablespoon active dry yeast</label>
+                  <label class="form-check-label" for="flour">4 cups (512g) all-purpose flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="coconutsugar">1 tablespoon coconut sugar</label>
+                  <label class="form-check-label" for="salt">2 teaspoons (10g) salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="water">1 1/2 cups warm water</label>
+                  <label class="form-check-label" for="yeast">2 teaspoons (8g) instant yeast</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flour">3 cups Bob's Red Mill gluten free all-purpose flour (spooned & leveled)</label>
+                  <label class="form-check-label" for="water">2 cups (455g) lukewarm water</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="salt">1 teaspoon salt</label>
+                  <label class="form-check-label" for="EVOO">4 tablespoons EVOO, divided</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="bakingpowder">1 teaspoon baking powder</label>
+                  <label class="form-check-label" for="flakysalt">Flaky sea salt, optional</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="EVOO">2 tablespoons EVOO, plus more for topping and pan</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="rosemary">1 tablespoon crushed dried rosemary</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flakysalt">Flaky sea salt</label>
+                  <label class="form-check-label" for="butter">Butter for greasing, optional</label>
                 </div>
               </div>
             </div>
@@ -217,31 +204,23 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  In a mixing bowl combine yeast, sugar, and warm water. Whisk well and let sit for 10-15 minutes, or until appearing foamy.
+                  <b>Make the dough:</b> In a large bowl, whisk together the flour, salt, and instant yeast. Add the water. Using a rubber spatula, mix until the liquid is absorbed and the ingredients form a sticky dough ball. Rub the surface of the dough lightly with olive oil. Cover the bowl with a damp tea towel, cloth bowl cover, or plastic wrap and place in the refrigerator immediately for at least 12 hours or for as long as three days. (See notes above if you need to skip the overnight rise for time purposes.) NOTE: It is important the dough really be slicked with olive oil especially if you are using a cloth bowl cover or tea towel as opposed to plastic wrap or a hard lid. If you are using a tea towel, consider securing it with a rubber band to make a more airtight cover. If you do not slick the dough with enough oil, you risk the dough drying out and forming a crust over the top layer. 
                 </li>
                 <li>
                   <span>2</span>
-                  To the same bowl, add flour, salt, baking powder, and EVOO. Mix well.
+                  Line a 9x13-inch pan with parchment paper or grease with butter or coat with nonstick cooking spray.
                 </li>
                 <li>
                   <span>3</span>
-                  Cover with a damp cloth or paper towel(s) and let sit in a warm place for 1 hour, or until doubled in size (it will be a rather wet batter).
+                  Pour a tablespoon of EVOO into the center of the 9x13-inch pan. Using two forks or your fingers, deflate the dough by releasing it from the sides of the bowl and pulling it toward the center. Rotate the bowl in quarter turns as you deflate, turning the mass into a rough ball. Place the dough into the prepared pan. Roll the dough ball in the oil to coat it all over, forming a rough ball. Let the dough ball rest for 3 to 4 hours depending on the temperature of your kitchen (Note: no need to cover for this room temperature rise).
                 </li>
                 <li>
                   <span>4</span>
-                  Grease a 9x13-inch pan with EVOO, then line with parchment paper (greasing helps the paper stick and hold shape).
+                  Set a rack in the middle of the oven and preheat it to 425°F. Pour a tablespoon of EVOO over the dough ball. Rub your hands lightly in the EVOO to coat, then, using all of your fingers, press straight down to create deep dimples. If necessary, gently stretch the dough as you dimple to allow the dough to fill the pan. Sprinkle with flaky sea salt all over.
                 </li>
                 <li>
                   <span>5</span>
-                  Pour the risen batter into the center of the pan. Cover and let sit to rise for 30 minutes longer, or until the entire pan has filled with batter.
-                </li>
-                <li>
-                  <span>6</span>
-                  Preheat the oven to 450°F. Press a wet finger into the batter to make small indents throughout. Drizzle with EVOO and sprinkle with dried rosemary.
-                </li>
-                <li>
-                  <span>7</span>
-                  Bake for 17 minutes, or until the bread is firm and golden brown. Let cool for 5-10 minutes before slicing. Optionally, sprinkle with a little coarse or flaked sea salt before serving.
+                  Transfer the pan to the oven and bake for 25 to 30 minutes, until the underside is golden and crisp. Remove the pan from the oven and transfer the focaccia to a cooling rack. Let it cool for 10 minutes before cutting and serving.
                 </li>
               </ul>
             </div>
@@ -253,17 +232,17 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/focaccia2.jpg" class="w-100" alt="Focaccia">
+            <img src="assets/images/food/foccacia1.jpg" class="w-100" alt="Focaccia">
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/focaccia.jpg" class="w-100" alt="Focaccia">
+            <img src="assets/images/food/foccacia2.jpg" class="w-100" alt="Focaccia">
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/focaccia1.jpg" class="w-100" alt="Focaccia">
+            <img src="assets/images/food/foccacia.jpg" class="w-100" alt="Focaccia">
           </figure>
         </div>
       </div>
