--- a/gffocaccia.html
+++ b/gffocaccia.html
@@ -121,24 +121,25 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Chocolate Chip Cookies</h5>
+          <h5 class="py-3 mb-0 h2">GF Focaccia</h5>
+          <div style="font-family:MADEVoyagerThin; font-size:15px;"><img src="assets/images/icons/gf.png" style="width:35px; height:35px"><img src="assets/images/icons/df.png" style="width:35px; height:35px"><img src="assets/images/icons/v.png" style="width:35px; height:35px"></div>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Joy Food Sunshine</small>
+          <small class="ps-1">Author: Kristen Wood from Moon And Spoon And Yum</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>October 6th, 2024</small>
+          <small>November 7th, 2023</small>
         </div>
       </div>
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/newchocolatechipcookies.jpg" class="w-100" >
+          <img src="assets/images/food/gffocaccia.jpg" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -146,19 +147,23 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>30 minutes</span>
+                <span>15 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>11 minutes</span>
+                <span>17 minutes</span>
+              </li>
+              <li>
+                <small>Rising Time</small>
+                <span>1 hour 30 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>41 minutes</span>
+                <span>1 hour 57 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>12 cookies
+                <span>10 pieces
                 </span>
               </li>
             </ul>
@@ -169,43 +174,39 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="butter">1/2 cup salted butter, softened to room temperature (I use Président)</label>
+                  <label class="form-check-label" for="yeast">1 tablespoon active dry yeast</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="granulatedsugar">1/2 cup granulated sugar</label>
+                  <label class="form-check-label" for="coconutsugar">1 tablespoon coconut sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="brownsugar">1/2 cup light brown sugar, packed</label>
+                  <label class="form-check-label" for="water">1 1/2 cups warm water</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="vanilla">1 teaspoon vanilla extract</label>
+                  <label class="form-check-label" for="flour">3 cups Bob's Red Mill gluten free all-purpose flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="egg">1 large egg</label>
+                  <label class="form-check-label" for="salt">1 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flour">1 1/2 cups flour (spooned & leveled)</label>
+                  <label class="form-check-label" for="bakingpowder">1 teaspoon baking powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="bakingsoda">1/2 teaspoon baking soda</label>
+                  <label class="form-check-label" for="EVOO">2 tablespoons EVOO, plus more for topping and pan</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="bakingpowder">1/4 teaspoon baking powder</label>
+                  <label class="form-check-label" for="rosemary">1 tablespoon crushed dried rosemary</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="salt">1/2 teaspoon salt</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="chocolate">1 1/2 cup chocolate, chopped (I use Blue Stripes Dark Chocolate)</label>
+                  <label class="form-check-label" for="flakysalt">Flaky sea salt</label>
                 </div>
               </div>
             </div>
@@ -216,48 +217,31 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Take out butter and leave it on the counter to soften before starting anything else.
+                  In a mixing bowl combine yeast, sugar, and warm water. Whisk well and let sit for 10-15 minutes, or until appearing foamy.
                 </li>
                 <li>
                   <span>2</span>
-                  Preheat oven to 375°F and line a baking sheet with parchment paper. Set aside.
+                  To the same bowl, add flour, salt, baking powder, and EVOO. Mix well.
                 </li>
                 <li>
                   <span>3</span>
-                  In a medium bowl, mix together dry ingredients: flour, baking soda, baking powder, and salt. Set aside.
+                  Cover with a damp cloth or paper towel(s) and let sit in a warm place for 1 hour, or until doubled in size (it will be a rather wet batter).
                 </li>
                 <li>
                   <span>4</span>
-                  Using a KitchenAid mixer, cream together butter and sugars until combined.  
+                  Grease a 9x13-inch pan with EVOO, then line with parchment paper (greasing helps the paper stick and hold shape).
                 </li>
                 <li>
                   <span>5</span>
-                  Beat in eggs and vanilla until light (about 1 minute).
+                  Pour the risen batter into the center of the pan. Cover and let sit to rise for 30 minutes longer, or until the entire pan has filled with batter.
                 </li>
                 <li>
                   <span>6</span>
-                  Mix in the dry ingredients, little by little, until combined. (Don't pour all dry ingredients in at once, mix half first, then the other half)
+                  Preheat the oven to 450°F. Press a wet finger into the batter to make small indents throughout. Drizzle with EVOO and sprinkle with dried rosemary.
                 </li>
                 <li>
                   <span>7</span>
-                  Add chocolate and mix well.
-                </li>
-                <li>
-                  <span>8</span>
-                  Put the bowl in the fridge for about 10 minutes for the dough to chill slightly.
-                </li>
-                <li>
-                  <span>9</span>
-                  Take the bowl of the fridge. Using a cookie scoop, place the dough evenly spaced on the prepared cookie sheet. Roll out each ball.
-                </li>
-                <li>
-                  <span>10</span>
-                  Bake in preheated oven for approximately 11 minutes. Don't overbake - they may be lightly browned in a few places, which is exactly how you want them.
-                  They will set up as they sit on the cookie sheet for a few minutes.
-                </li>
-                <li>
-                  <span>11</span>
-                  Let them sit on the baking pan for 5 minutes before removing to cooling rack. Store in an airtight container at room temperature for up to 5 days, or in the freezer for up to 2 months. 
+                  Bake for 17 minutes, or until the bread is firm and golden brown. Let cool for 5-10 minutes before slicing. Optionally, sprinkle with a little coarse or flaked sea salt before serving.
                 </li>
               </ul>
             </div>
@@ -269,17 +253,17 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/newchocolatechipcookies1.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            <img src="assets/images/food/gffocaccia2.jpg" class="w-100" alt="GF Focaccia">
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/newchocolatechipcookies2.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            <img src="assets/images/food/gffocaccia.jpg" class="w-100" alt="GF Focaccia">
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/newchocolatechipcookies3.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            <img src="assets/images/food/gffocaccia1.jpg" class="w-100" alt="GF Focaccia">
           </figure>
         </div>
       </div>
