--- a/savory.html
+++ b/savory.html
@@ -228,11 +228,11 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/focaccia" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/focaccia.jpg" class="w-100" alt="Focaccia">
+            <a href="/gffocaccia" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/gffocaccia.jpg" class="w-100" alt="GF Focaccia">
             </a>
             <figcaption class="mt-2">
-              <a href="/focaccia" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Focaccia</a>
+              <a href="/gffocaccia" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF Focaccia</a>
             </figcaption>
           </figure>
         </div>
@@ -265,6 +265,18 @@
             </a>
             <figcaption class="mt-2">
               <a href="/trufflepasta" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Truffle Pasta</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/focaccia" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/foccacia2.jpg" class="w-100" alt="Focaccia">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/focaccia" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Focaccia</a>
             </figcaption>
           </figure>
         </div>
