--- a/triplechocolatecookies.html
+++ b/triplechocolatecookies.html
@@ -121,7 +121,7 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Chocolate Chip Cookies</h5>
+          <h5 class="py-3 mb-0 h2">Triple Chocolate Cookies</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
@@ -132,13 +132,13 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>October 6th, 2024</small>
+          <small>October 16th, 2024</small>
         </div>
       </div>
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/newchocolatechipcookies.jpg" class="w-100" >
+          <img src="assets/images/food/triplechocolatecookies1.jpg" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -146,15 +146,15 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>30 minutes</span>
+                <span>15 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>11 minutes</span>
+                <span>12 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>41 minutes</span>
+                <span>27 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
@@ -189,7 +189,11 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flour">1 1/2 cups flour (spooned & leveled)</label>
+                  <label class="form-check-label" for="flour">1 1/4 cups flour (spooned & leveled)</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="cocoapowder">1/4 cup unsweetened cocoa powder (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -205,7 +209,11 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="chocolate">1 1/2 cup chocolate, chopped (I use Blue Stripes Dark Chocolate)</label>
+                  <label class="form-check-label" for="chocolate">1 cup chocolate, chopped (I use Blue Stripes Dark Chocolate)</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="whitechocolate">1 cup white chocolate, chopped (I use Tony's Chocolonely)</label>
                 </div>
               </div>
             </div>
@@ -220,11 +228,11 @@
                 </li>
                 <li>
                   <span>2</span>
-                  Preheat oven to 375°F and line a baking sheet with parchment paper. Set aside.
+                  Preheat oven to 350°F and line a baking sheet with parchment paper. Set aside.
                 </li>
                 <li>
                   <span>3</span>
-                  In a medium bowl, mix together dry ingredients: flour, baking soda, baking powder, and salt. Set aside.
+                  In a medium bowl, mix together dry ingredients: flour, cocoa powder, baking soda, baking powder, and salt. Set aside.
                 </li>
                 <li>
                   <span>4</span>
@@ -240,7 +248,7 @@
                 </li>
                 <li>
                   <span>7</span>
-                  Add chocolate and mix well.
+                  Add chocolate and white chocolate and mix well.
                 </li>
                 <li>
                   <span>8</span>
@@ -252,7 +260,7 @@
                 </li>
                 <li>
                   <span>10</span>
-                  Bake in preheated oven for approximately 11 minutes. Don't overbake - they may be lightly browned in a few places, which is exactly how you want them.
+                  Bake in preheated oven for approximately 12 minutes. Don't overbake - they may be lightly browned in a few places, which is exactly how you want them.
                   They will set up as they sit on the cookie sheet for a few minutes.
                 </li>
                 <li>
@@ -269,17 +277,17 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/newchocolatechipcookies1.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            <img src="assets/images/food/triplechocolatecookies2.jpg" class="w-100" alt="Triple Chocolate Cookies">
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/newchocolatechipcookies2.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            <img src="assets/images/food/triplechocolatecookies4.jpg" class="w-100" alt="Triple Chocolate Cookies">
           </figure>
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <img src="assets/images/food/newchocolatechipcookies3.jpg" class="w-100" alt="Chocolate Chip Cookies">
+            <img src="assets/images/food/triplechocolatecookies3.jpg" class="w-100" alt="Triple Chocolate Cookies">
           </figure>
         </div>
       </div>
