--- a/breads.html
+++ b/breads.html
@@ -248,6 +248,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/spiralburek" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/spiralburek3.png" class="w-100" alt="Spiral Burek">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/spiralburek" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Spiral Burek</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </section>
   </div>
