--- a/spiralburek.html
+++ b/spiralburek.html
@@ -138,7 +138,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/spiralburek1.png" class="w-100" >
+          <img src="assets/images/food/spiralburek3.png" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -204,31 +204,35 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  In a mixing bowl combine flour, salt, EVOO, and 1 cup of water. Mix with your hands until dough becomes not too soft and a little bit sticky. If the dough is too hard, add a little more water. If the dough is too soft and sticky, add a little more flour. The perfect texture will be not too soft and a little bit sticky.
+                  In a mixing bowl combine flour, salt, and EVOO. Pour one cup of water in and mix. Check the texture to see if you need more water. The perfect texture will be not too soft and a little bit sticky. If the dough is too hard, add a little bit more water. If it's too soft and too sticky, add a little bit flour. Usually 1 1/2 cups of water is needed, which is roughly 400 mL.
                 </li>
                 <li>
                   <span>2</span>
-                  Take the dough and put it on a flat surface. Knead the dough with your wrists. Roll the dough, fold it over itself, then roll it again. Repeat this for five minutes.
+                  Once you find the perfect texture, take the dough and put it on a flat surface. Using your wrists, knead thd dough for about 5 minutes. Do not use your palms as the wrists are much more efficient. 
                 </li>
                 <li>
                   <span>3</span>
-                  Transfer the dough back to the bowl and spread a slight layer of EVOO on top with your hands, just so that it lightly covers the dough. Cover the bowl with plastic wrap twice. Wait 30 minutes for the dough to rest.
+                  When you are done kneading the dough, put it back in the bowl and cover it in EVOO. Place plastic wrap over the bowl to cover it.
                 </li>
                 <li>
                   <span>4</span>
-                  After the dough has rested for 30 minutes, preheat the oven to 360°F. Take the dough out and put it on a flat surface. Roll the dough into a log. Using your hands, cut the dough into 8 small equally sized pieces, then roll each into a ball. Cover each ball with a thin layer of EVOO using your hands so that they don't dry out. Put them all aside.
+                  Set the bowl aside and let the dough rest for about 30 minutes. 
                 </li>
                 <li>
                   <span>5</span>
-                  
+                  Once the dough has rested for 30 minutes, begin to roll the dough into the shape of a log. Separate the dough in about 8 to 10 small spheres. Make sure to cover each sphere with EVOO so they don't dry out - don't put too much EVOO, and don't put too little either. Put them all aside and grab the first sphere.
                 </li>
                 <li>
                   <span>6</span>
-                  
+                  Preheat the oven to 360°F. Roll the first sphere out several times, then flip it 90 degrees to start rolling it again. Repeat this process until the sheet is so thin you can see the countertop underneath it. You are looking to maintain a rectangular shape as you roll out the dough.
                 </li>
                 <li>
                   <span>7</span>
-                  Bake for 40-50 minutes, or until the burek is golden brown. Let cool for 5 before slicing.
+                  Now that the sheet is ready, we are going to fill it with cheese. Use a spoon to spread the cheese on the bottom half of the sheet. Feel free to spread some melted butter across the rest of the sheet to give the burek more flavor. Grab the side of the sheet with cheese spread and start rolling it towards the opposite side. Try not to make it too tight because when we bake it, the layers will separate from each other. Repeat this process for the remaining spheres.
+                </li>
+                <li>
+                  <span>8</span>
+                  To bake the burek, use a cast iron and make sure the bottom is covered with a thin layer of melted butter. Take the first roll and place it in a spiral shape starting at the middle of the cast iron. Place the remaining rolls around the first sphere until you have a spiral in the cast iron. Brush the spiral with a thin layer of melted butter. Bake the burek for 40 to 50 minutes, until it's golden brown. When it's done, it should be crispy on the outside and soft on the inside. Let it cool down for a few minutes before you cut it.
                 </li>
               </ul>
             </div>
@@ -246,6 +250,11 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <img src="assets/images/food/spiralburek2.jpeg" class="w-100" alt="Spiral Burek">
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <img src="assets/images/food/spiralburek3.png" class="w-100" alt="Spiral Burek">
           </figure>
         </div>
       </div>
